# unagent

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml  security.yml
docs/: ARCHITECTURE.md
src/unagent/: __init__.py  __main__.py  agent.py  cli.py  config.py  memory.py
src/unagent/providers/: __init__.py  base.py  mock.py
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py
